--- a/frontendv2/package.json
+++ b/frontendv2/package.json
@@ -15,6 +15,7 @@
     "mermaid": "^11.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
